translated "Live-Sendungen:"

--- a/app/l10n/locale-de.json
+++ b/app/l10n/locale-de.json
@@ -38,6 +38,7 @@
   },
   "main": {
     "list": {
+      "title": "Live-Sendungen:",
       "starttime": "Startzeit",
       "podcast": "Podcast",
       "number": "Nummer",
