--- a/app/l10n/locale-de.json
+++ b/app/l10n/locale-de.json
@@ -2,8 +2,10 @@
   "layout": {
     "menu": {
       "archive": "Archiv",
-      "aboutUs": "Über&nbsp;uns",
-      "help": "Hilfe"
+      "aboutUs": "Über",
+      "help": "Hilfe",
+      "contact": "Kontakt",
+      "toggle": "Menü ein-/ausblenden"
     },
     "footer": {
       "copyright": "Alle Sendungsnotizen unterliegen der <a href='http://creativecommons.org/publicdomain/zero/1.0/deed.de' rel='license'>CC0-Lizenz.</a>"
@@ -11,7 +13,7 @@
   },
   "sidebar": {
     "login": {
-      "info": "Die kollaborative Plattform zum Crowdsourcing von Sendungsnotizen. <a href='/about'>Mehr <span class='icon-arrow-right'></span></a>",
+      "info": "Die kollaborative Plattform zum Crowdsourcing von Sendungsnotizen. <a href='/about'>Mehr&nbsp;<span class='icon-arrow-right'></span></a>",
       "username": "Benutzername",
       "username.title": "Gib deinen Benutzernamen ein",
       "email": "E-Mail-Adresse",
