--- a/app/l10n/locale-de.json
+++ b/app/l10n/locale-de.json
@@ -8,7 +8,7 @@
       "toggle": "Menü ein-/ausblenden"
     },
     "footer": {
-      "copyright": "Alle Sendungsnotizen unterliegen der <a href='http://creativecommons.org/publicdomain/zero/1.0/deed.de' rel='license'>CC0-Lizenz.</a>"
+      "copyright": "Alle Sendungsnotizen unterliegen der <a href='http://creativecommons.org/publicdomain/zero/1.0/deed.de' rel='license'>CC0-Lizenz</a>."
     }
   },
   "sidebar": {
