finished l10n. Only privacy is still in German.

--- a/app/languages/lang_de_DE.json
+++ b/app/languages/lang_de_DE.json
@@ -1,15 +1,180 @@
 {
-	"DOCUMENT_LIVE_LOGIN": "logge dich bitte ein und klicke dann",
-	"DOCUMENT_LIVE_WELCOME": "Willkommen! Hier siehst du, welche Podcast-Aufzeichnungen wann beginnen. Um live bei den Sendungsnotizen zu helfen,",
-	"DOCUMENT_LIVE_TITLE": "Die kollaborative Plattform für Sendungsnotizen",
-	"DOCUMENT_LIVE_CLICK": "klicke",
-	"DOCUMENT_LIVE_JOIN": "auf <strong>Erstellen</strong> oder <strong>Mitschreiben</strong>. <a href=\"/faq/\">Hast du noch Fragen?</a>",
-	"DOCUMENT_LIVE_STARTTIME": "Startzeit",
-	"DOCUMENT_LIVE_PODCAST": "Podcast",
-	"DOCUMENT_LIVE_ABBR": "Kürzel",
-	"DOCUMENT_LIVE_CREATE": "Erstellen",
-	"DOCUMENT_LIVE_LATER": "Später",
+	"USER_UPGRADE_TITLE": "Die neue Plattform",
+	"USER_UPGRADE_HINT": "Wie aufregend!",
+	"USER_UPGRADE_HELLO": "Hallo <em>{{name}}</em>! Wie du siehst, hat sich hier einiges verändert.",
+	"USER_UPGRADE_RULES": "Da du bereits beim alten <em>ShowPad</em> einen Account hattest, möchten wir dich bitten, dein Passwort aus Sicherheitsgründen zu ändern und unsere neuen <a href=\"/rules\">Regeln</a> zu akzeptieren.",
+	"USER_UPGRADE_DATA": "Daten aktualisieren",
+	"USER_UPGRADE_PASSWORD_NEW": "Neues Passwort",
+	"USER_UPGRADE_PASSWORD_CONFIRM": "Neues Passwort bestätigen",
+	"USER_UPGRADE_PASSWORD_SAVE": "Speichern und fortfahren",
+	"USER_UPGRADE_PASSWORD_SUCCESS": "",
+	"USER_UPGRADE_PASSWORD_ERROR": "Bitte überprüfe noch einmal deine Angaben.",
+	"USER_UPGRADE_FAQ": "Bei Unklarheiten kannst du einen Blick auf die <a href=\"/faq/\">häufig gestellten Fragen</a> werfen.",
 
+	"USER_PROFILE_PWRESET_TITLE": "Passwort ändern",
+	"USER_PROFILE_PWRESET_HINT": "Und das nächste Mal einfach merken",
+	"USER_PROFILE_PWRESET_HELLO": "Hallo {{name}}! Du kannst nun dein Passwort ändern.",
+	"USER_PROFILE_PWRESET_LENGTH": "Denk daran: Je länger das Passwort, umso sicherer ist es.",
+	"USER_PROFILE_PWRESET_CHANGE": "Passwort ändern",
+	"USER_PROFILE_PWRESET_CONFIRM": "Neues Passwort bestätigen",
+	"USER_PROFILE_PWRESET_SAVE": "Passwort speichern",
+	"USER_PROFILE_PWRESET_SUCCESS": "Dein Passwort wurde erfolgreich geändert.",
+	"USER_PROFILE_PWRESET_ERROR": "Bitte überprüfe noch einmal deine Angaben.",
+
+	"USER_PROFILE_TITLE": "Profil bearbeiten",
+	"USER_PROFILE_HOME": "Fühl dich wie zu Hause.",
+	"USER_PROFILE_HELLO1": "Hallo ",
+	"USER_PROFILE_HELLO2": " Hier kannst du dein ",
+	"USER_PROFILE_HELLO3": "persönliches Profil bearbeiten.",
+	"USER_PROFILE_BIO": "Biographie &amp; Farbe",
+	"USER_PROFILE_PUBLIC": "Diese Angaben sind öffentlich einsehbar.",
+	"USER_PROFILE_BIO_PLACEHOLDER": "Erzähl etwas über dich. Was ist dein Lieblingspodcast?",
+	"USER_PROFILE_COLOR": "Deine Farbe im Editor:",
+	"USER_PROFILE_COLOR_ERROR": "Diese Farbe ist leider zu dunkel.",
+	"USER_PROFILE_SAVE": "Änderungen speichern",
+	"USER_PROFILE_SAVE_SUCCESS": "Einstellungen erfolgreich gespeichert.",
+	"USER_PROFILE_SAVE_ERROR": "Bitte überprüfe noch einmal deine Angaben.",
+	"USER_PROFILE_LINK": "Verknüpfungen",
+	"USER_PROFILE_FLATTR": "Flattr",
+	"USER_PROFILE_APP": "App.net",
+	"USER_PROFILE_TWITTER": "Twitter",
+	"USER_PROFILE_LINK_SAVE": "Verknüpfungen speichern",
+	"USER_PROFILE_LINK_SUCCESS": "Verknüpfungen erfolgreich gespeichert.",
+	"USER_PROFILE_LINK_ERROR": "Bitte überprüfe noch einmal deine Angaben.",
+	"USER_PROFILE_MAIL_TITLE": "E-Mail-Adresse",
+	"USER_PROFILE_MAIL_TEXT": "Deine aktuelle E-Mail-Adresse lautet <strong>{{mail}}</strong>. Sie wird nicht veröffentlicht.",
+	"USER_PROFILE_MAIL_NEW": "Neue E-Mail-Adresse",
+	"USER_PROFILE_PASSWORD_CONFIRM": "Aktuelles Passwort bestätigen",
+	"USER_PROFILE_MAIL_CHANGE": "E-Mail-Adresse ändern",
+	"USER_PROFILE_MAIL_SUCCESS": "Bitte bestätige deine neue E-Mail-Adresse mit dem Link in deinem Posteingang.",
+	"USER_PROFILE_MAIL_ERROR": "Bitte überprüfe noch einmal deine Angaben.",
+	"USER_PROFILE_PASSWORD_TITLE": "Passwort",
+	"USER_PROFILE_PASSWORD_HINT": "Für Passwörter gilt: Je länger, desto sicherer.",
+	"USER_PROFILE_PASSWORD_NEW": "Neues Passwort",
+	"USER_PROFILE_PASSWORD_REPEAT": "Neues Passwort wiederholen",
+	"USER_PROFILE_PASSWORD_CHANGE": "Passwort ändern",
+	"USER_PROFILE_PASSWORD_SUCCESS": "Passwort erfolgreich geändert.",
+	"USER_PROFILE_PASSWORD_ERROR": "Bitte überprüfe noch einmal deine Angaben.",
+
+	"USER_ACTIVE_TITLE": "E-Mail-Bestätigung",
+	"USER_ACTIVE_HINT": "Hinweis",
+	"USER_ACTIVE_SUCCESS": "Vielen Dank, dein Account wurde freigeschaltet.<br />Du kannst dich nun unter <em>&bdquo;Mein Account&ldquo;</em> einloggen.",
+	"USER_ACTIVE_ERROR": "Dein Account konnte nicht freigeschalten werden.<br />Bitte melde dich bei uns.",
+	"USER_ACTIVE_MAIL_CHANGED": "Deine E-Mail-Adresse wurde geändert.",
+	"USER_ACTIVE_MAIL_ERROR": "Deine E-Mail-Adresse konnte nicht geändert werden.<br />Bitte melde dich bei uns.",
+
+	"USER_REG_COMPLETE_TITLE": "Registration erfolgreich",
+	"USER_REG_COMPLETE_HINT": "Hinweis",
+	"USER_REG_COMPLETE_ACCOUNT": "Vielen Dank, dein Account wurde erstellt!",
+	"USER_REG_COMPLETE_CONFIRM": "Bitte bestätige deine E-Mail-Adresse, indem du auf den Link klickst, der dir soeben via E-Mail zugeschickt wurde.",
+
+	"RULES_TITLE": "Regeln",
+	"RULES_TEXT": "Jedes registrierte Mitglied verpflichtet sich dazu, die folgenden Regeln zu akzeptieren:",
+	"RULES_RULES": "<li><strong>Das Obligatorische vorab: Freundlichkeit zahlt sich aus.</strong><br />Ein guter Umgangston ist selbstverständlich. Bei Unklarheiten darf jederzeit nachgefragt werden.</li><li><strong>Sendungsnotizen werden gewissenhaft mitgeschrieben.</strong><br />Inhalte dürfen nicht absichtlich verfälscht werden.</li><li><strong>Alle erstellten Inhalte werden unter der <a href=\"https://creativecommons.org/publicdomain/zero/1.0/deed.de\" rel=\"license\">CC0-Lizenz</a> veröffentlicht.</strong><br />Das heißt kurz und knapp: Sämtliche Rechte werden abgetreten &mdash; jeder kann damit tun, was er möchte.</li><li><strong>Die Mitarbeit erfolgt auf freiwilliger Basis.</strong><br />Wir bezahlen dich nicht. Eingenommene <a href=\"/donate/\">Spenden</a> kommen der Plattform zugute.</li><li><strong>Spam ist absolut verboten.</strong><br />Das gilt sowohl für den Editor und den dazugehörigen Chat, als auch für unseren IRC-Kanal und E-Mail-Verkehr.</li>",	
+	"RULES_VIOLATION": "Bei Regelverstößen behalten wir uns vor, Mitglieder nach eigenem Ermessen von der Plattform auszuschließen. Weitere Informationen finden sich bei den <a href=\"/faq/\">häufig gestellten Fragen</a>.",
+
+	"IMPRINT_TITLE": "Impressum",
+	"IMPRINT_REFERENCE": "Gemäß § 5 TMG",
+	"IMPRINT_HINT": "<strong>Hinweis:</strong> Für generelle Supportanfragen ist die <a href=\"/community/\">Community</a> gedacht. Dieses Impressum gilt auch für unseren <a href=\"https://twitter.com/DieShownotes\">Twitter</a>- und <a href=\"https://alpha.app.net/shownotes\">App.net</a>-Account.",
+	"IMPRINT_ADDRESS_TITLE": "Anschrift",
+	"IMPRINT_ADDRESS": "shownot.es<br />c/o Evita Bley<br />Poststraße 33<br />01159 Dresden",
+	"IMPRINT_VISIT": "Von unangekündigten Besuchen raten wir ab.",
+	"IMPRINT_CONTACT_TITLE": "Kontakt",
+	"IMPRINT_CONTACT": "E-Mail-Adresse: <a href=\"mailto:intern@shownot.es\">intern@shownot.es</a><br />Telefonnummer: (+49) 030 / 555 795 69",
+	"IMPRINT_MAIL": "Kontaktanfragen via E-Mail werden bevorzugt.",
+	"IMPRINT_COPYRIGHT_TITLE": "Urheberrecht",
+	"IMPRINT_COPYRIGHT": "Alle veröffentlichten Textinhalte stehen, soweit nicht anders vermerkt, unter der <a href=\"https://creativecommons.org/publicdomain/zero/1.0/deed.de\" rel=\"license\" title=\"CC0 1.0 Universell (Public Domain Dedication)\">CC0-Lizenz</a> (<em><q>Public Domain Dedication</q></em>, bedingungslose Lizenz). Andere Inhalte, insbesondere die Cover-Bilder, können davon abweichen.",
+	"IMPRINT_OTHER_TITLE": "Sonstiges",
+	"IMPRINT_OTHER_TEXT": "Diese Seite basiert auf Open-Source-Software wie <a href=\"https://angularjs.org\">AngularJS</a>, <a href=\"https://www.djangoproject.com\">Django</a> und <a href=\"etherpad.org\">Etherpad</a>.",
+	"IMPRINT_UBERSPACE": "shownot.es wird von Uberspace gehostet",
+
+	"FAQ_TITLE": "Häufig gestellte Fragen",
+	"FAQ_GENERAL_QUESTIONS": "Allgemeine Fragen",
+	"FAQ_SHOWNOTES":"Was ist shownot.es?",
+	"FAQ_SHOW_NOTES": "Was sind Sendungsnotizen?",
+	"FAQ_OSF": "Was ist OSF?",
+	"FAQ_ENGLISH": "Gibt es diese Plattform auch auf Englisch?",
+	"FAQ_DEVELOP": "Kann ich dabei helfen, shownot.es weiterzuentwickeln?",
+	"FAQ_LICENSE": "Unter welcher Lizenz stehen die hier erstellten und veröffentlichten Inhalte?",
+	"FAQ_SHOWNOTER_QUESTIONS": "Fragen von Shownotern",
+	"FAQ_HELP": "Wie kann ich mich beteiligen?",
+	"FAQ_PAYMENT": "Wieso bekomme ich als Helfer kein Geld?",
+	"FAQ_PODCASTER_QUESTIONS": "Fragen von Podcastern",
+	"FAQ_ADVANTAGE": "Welchen Vorteil haben Sendungsnotizen?",
+	"FAQ_MY_PODCAST": "Wie kommt mein Podcast auf shownot.es?",
+	"FAQ_FIND_HELPER": "Wie überzeuge ich meine Hörer, Sendungsnotizen zu schreiben?",
+	"FAQ_REWARDS": "Bin ich dazu verpflichtet, die Helfer namentlich zu nennen oder zu belohnen?",
+	"FAQ_NEW_QUESTION": "Deine Frage ist nicht dabei? Wende dich an die <a href=\"/community/\">Community</a> oder schick uns eine <a href=\"mailto:intern@shownot.es\">E-Mail</a>!",
+	"FAQ_GENERAL_ANSWERS": "Allgemeine Antworten",
+	"FAQ_SHOWNOTES_ANSWER": "<em>shownot.es</em> ist eine <a href=\"https://de.wikipedia.org/wiki/Crowdsourcing\">kollaborative</a> Plattform, auf der <a href=\"https://de.wikipedia.org/wiki/Podcasting#Sendungsnotizen\">Sendungsnotizen</a> (engl. <em><q>show notes</q></em>) für <a href=\"https://de.wikipedia.org/wiki/Podcasting\">Podcasts</a> verfasst werden. Freiwillige Helfer (<em><q>Shownoter</q></em>) hören sich gemeinsam Sendungen an und schreiben Stichpunkte mit, sammeln Links oder suchen weitere Informationen.",
+	"FAQ_SHOW_NOTES_ANSWER": "Sendungsnotizen sind <a href=\"https://de.wikipedia.org/wiki/Metadaten\">Metadaten</a> von Podcasts. Sie enthalten nicht den Podcast selbst, aber beschreibende Informationen, die in der Regel mit einer Zeitangabe versehen sind. Dadurch werden die Inhalte von reinen Audioformaten durchsuchbar.",
+	"FAQ_OSF_ANSWER": "<q>OSF</q> steht für <em><q>Open Shownotes Format</q></em>. Dieses von uns definierte Format soll die Erstellung von Sendungsnotizen erleichtern und standardisieren. Beispiel für eine Zeile in OSF:<br /><code>00:13:37 Geofencing &lt;https://de.wikipedia.org/wiki/Geofencing&gt; #g</code><br />Von links nach rechts: <em>Zeitstempel</em>, <em>Textangabe</em>, <em>Link</em>, <em>Tag</em>. Eine <a href=\"https://github.com/shownotes/OpenShownotesFormat\">ausführliche Dokumentation</a> gibt es auch.",
+	"FAQ_ENGLISH_ANSWER": "Zurzeit nicht, nein. Wir halten dich auf dem Laufenden!<br /><span lang=\"en\"><em>Currently, there isn't. But stay tuned!</em></span>",
+	"FAQ_DEVELOP_ANSWER": "Selbstverständlich! Wir sind ständig auf der Suche nach neuen Entwicklern. Ein <a href=\"https://github.com/shownotes\">GitHub</a>-Account ist dafür die einzige Voraussetzung.",
+	"FAQ_LICENSE_ANSWER": "Alle Textinhalte stehen grundsätzlich unter der <a href=\"https://creativecommons.org/publicdomain/zero/1.0/deed.de\" rel=\"license\" title=\"CC0 1.0 Universell (Public Domain Dedication)\">CC0-Lizenz</a>. Das heißt knapp zusammengefasst: Jeder darf damit &mdash; auch ohne Quellenangabe &mdash; machen, was er möchte.",
+	"FAQ_SHOWNOTER_ANSWERS": "Antworten an Shownoter",
+	"FAQ_HELP_ANSWER": "Wir empfehlen dir, dich zunächst unter <em>Mein Account</em> zu registrieren. Während einer Livesendung kannst im dazugehörigen <q>Pad</q> stichpunktartig das Wichtigste mitnotieren.<br />Berühungsängste? &mdash; Keine Sorge, wir verbessern uns alle gegenseitig. Jede Kleinigkeit hilft.",
+	"FAQ_PAYMENT_ANSWER": "<em>shownot.es</em> ist ein Projekt von, mit und für Freiwillige. Die <a href=\"/donate/\">Spenden</a> reichen, um anfallende Kosten zu decken &mdash; die faire <q>Bezahlung</q> von selbst einer einzigen Person ist hingegen (noch) utopisch.",
+	"FAQ_PODCASTER_ANSWERS": "Antworten an Podcaster",
+	"FAQ_ADVANTAGE_ANSWER": "<li>Sie bieten potenziellen Hörern bereits vorab einen Überblick der Podcastinhalte.</li><li>Während des Hörens kann man bequem über Links auf weiterführende Themen und angesprochende Begriffe zugreifen.</li><li>Hörgeschädigte werden nicht gänzlich ausgeschlossen.</li><li>Die Episoden eines Podcasts mit Sendungsnotizen können einfacher durchsucht werden.</li>",
+	"FAQ_MY_PODCAST_ANSWER": "<em>shownot.es</em> führt derzeit alle Podcasts mit Livesendungen im Verzeichnis der <a href=\"http://hoersuppe.de\">Hörsuppe</a> auf.",
+	"FAQ_FIND_HELPER_ANSWER": "Erwähne diese Plattform. Erzähle etwas darüber. Fordere deine Hörer auf, es einmal zu versuchen.",
+	"FAQ_REWARDS_ANSWER": "Die kurze Antwort: nein.<br />Die lange: Wie du dich bei Shownotern bedankst, ist dir überlassen. Freiwillige Arbeit erfodert allerdings immer auch Motivation. Daher gehört mindestens die Erwähnung der Helfer zum guten Ton. Du kannst sie natürlich auch flattern oder ihnen kleine Aufmerksamkeiten zukommen lassen.",
+
+	"DONATE_TITLE": "Spenden",
+	"DONATE_TEXT": "<em>shownot.es</em> finanziert sich komplett durch freiwillige Spenden. Das eingenommene Geld kommt vollständig dem Projekt zugute &mdash; sei es für Webspace, Domain, SSL-Zertifikat oder (einen Teil) der anfallenden Reisekosten für einen Workshop.",
+	"DONATE_HINT": "<strong>Wichtig:</strong> Die freiwilligen Helfer können leider nicht bezahlt werden. Es wäre unmöglich, jedem einen fairen Anteil zu geben. Die Podcaster sind als Alternative dazu angeregt, beispielsweise den <a href=\"https://flattr.com\">Flattr</a>-Button der einzelnen Shownoter unter ihre Sendungen zu setzen.",
+	"DONATE_FLATTR_TITLE": "Flattr",
+	"DONATE_FLATTR_TEXT": "Das Konzept hinter <a href=\"https://flattr.com/profile/shownotes\">Flattr</a> ist schnell erklärt: Ein fester Betrag, der gleichmäßig auf alle geflatterten Projekte aufgeteilt wird. 10 % davon geben wir monatlich an Gebühren ab. Wir freuen uns über jeden Klick auf einen unserer Buttons: <a class=\"FlattrButton\" style=\"display:none;\" rev=\"flattr;button:compact;\" href=\"http://shownot.es/\"></a>",
+	"DONATE_MAIL": "Wenn du uns auf anderem Wege etwas zukommen lassen möchtest oder Feedback hast, kannst du uns gerne eine <a href=\"mailto:intern@shownot.es\">E-Mail</a> schicken.",
+
+	"NUMBERLIST_NONE": "keine",
+	"NUMBER_AND": "und",
+
+	"NAMELIST_NONE": "Noch keine",
+	"NAMELIST_DELETE": "Löschen",
+	"NAMELIST_NAME": "Name",
+	"NAMELIST_ADD": "Hinzufügen",
+
+	"FOOTER_DONATE": "Spenden",
+	"FOOTER_RULES": "Regeln",
+	"FOOTER_PRIVACY": "Datenschutz",
+	"FOOTER_IMPRINT": "Impressum",
+
+	"PROFILE_FAILURE": "Fehler: Benutzer nicht gefunden",
+	"PROFILE_HINT": "Hinweis",
+	"PROFILE_SORRY": "Entschuldige, aber der gewünschte Benutzer konnte nicht gefunden werden.",
+	"PROFILE_MEMBER": "Mitglied",
+	"PROFILE_ADMIN": "Administrator",
+	"PROFILE_LAST_LOGIN": "war {{time}} online",
+	"PROFILE_HELLO1": "Hallo ",
+	"PROFILE_HELLO2": "! Möchtest du dein ",
+	"PROFILE_HELLO3": "Profil bearbeiten",
+	"PROFILE_BIO": "Biographie",
+	"PROFILE_NO_BIO": "Dieses Mitglied hat noch keine Biographie angelegt.",
+	"PROFILE_FLATTR": "{{name}} auf Flattr",
+	"PROFILE_TWITTER": "{{name}} auf Twitter",
+	"PROFILE_APP": "{{name}} auf App.net",
+
+	"LIVE_TITLE": "Die kollaborative Plattform für Sendungsnotizen",	
+	"LIVE_WELCOME": "Willkommen! Hier siehst du, welche Podcast-Aufzeichnungen wann beginnen. Um live bei den Sendungsnotizen zu helfen,",
+	"LIVE_LOGIN": "logge dich bitte ein und klicke dann",
+	"LIVE_CLICK": "klicke",
+	"LIVE_JOIN": "auf <strong>Erstellen</strong> oder <strong>Mitschreiben</strong>. <a href=\"/faq/\">Hast du noch Fragen?</a>",
+	"LIVE_STARTTIME": "Startzeit",
+	"LIVE_PODCAST": "Podcast",
+	"LIVE_ABBR": "Kürzel",
+	"LIVE_CREATE": "Erstellen",
+	"LIVE_LATER": "Später",
+	"LIVE_WRITE": "Mitschreiben",
+	"LIVE_NO_SHOWS": "Derzeit sind keine Sendungen eingetragen.",
+	"LIVE_SOUP": "Die meisten dieser Termine stammen aus dem <a href=\"http://hoersuppe.de/kalender/\">Hörsuppe-Kalender</a>. &hearts;",
+	"LIVE_NEW_TITLE": "Neues Dokument anlegen",
+	"LIVE_NEW_TEXT": "Möchtest du Shownotes für einen Podcast schreiben, der nicht in der Liste steht? Kein Problem! Suche den richtigen Podcast, gib eine Episodennummer ein und schon kann es losgehen.<br />Falls du den Podcast deiner Wahl nicht finden solltest, <a href=\"mailto:intern@shownot.es\">melde dich bitte bei uns</a>.",
+	"LIVE_NEW_PLACEHOLDER": "Podcast",
+	"LIVE_OLD_NUMBERS": "Die letzten Episodennummer in diesem Podcast war: ",
+	"LIVE_EPISODE_NUMBER": "Episodennummer",
+	"LIVE_NO_NUMBER": "noch keins",
 
 	"DOCUMENT_SIGHTING_NOINFO": "Es liegen keine Informationen von xenim vor.",
 	"DOCUMENT_SIGHTING_UNKNOWN": "Unbekannt",
@@ -59,7 +224,7 @@
 
 	"ARCHIVE_SHOWS": "Sendungen",
 	"ARCHIVE_INTRODUCTION": "In diesem Archiv sind alle Podcasts aufgeführt, für die auf <em>shownot.es</em> bereits Sendungsnotizen erstellt wurden. <a href=\"/faq/\">Wie kommt mein Podcast auf diese Liste?</a>",
-	"ARCHIVE_RECENTYL": "Kürzlich erstellt für",
+	"ARCHIVE_RECENTLY": "Kürzlich erstellt für",
 	"ARCHIVE_ALL_SHOWS": "Alle Podcasts",
 
 	"SIDEBAR_MYACCOUNT": "Mein Account",
@@ -71,7 +236,8 @@
 	"SIDEBAR_PASSWORD_ENTER": "Gib dein Passwort ein",
 	"SIDEBAR_PASSWORD_REPEAT": "Wiederhole dein Passwort",
 	"SIDEBAR_PASSWORD_ENTER_REPEAT": "Wiederhole dein Passwort",
-	"SIDEBAR_PASSWORD_LOST": "Hast du dein <a href=\"#\" ng-click=\"requestPwReset()\">Passwort vergessen</a>?",
+	"SIDEBAR_PASSWORD_LOST1": "Hast du dein ",
+	"SIDEBAR_PASSWORD_LOST2": "Passwort vergessen",
 	"SIDEBAR_CHECK_INBOX": "Überprüfe dein E-Mail-Postfach.",
 	"SIDEBAR_LOGIN": "Einloggen",
 	"SIDEBAR_REGISTER": "Registrieren",
