Added XMPP and IRC to user profile

--- a/app/languages/lang_de_DE.json
+++ b/app/languages/lang_de_DE.json
@@ -38,7 +38,9 @@
 	"USER_PROFILE_FLATTR": "Flattr",
 	"USER_PROFILE_APP": "App.net",
 	"USER_PROFILE_TWITTER": "Twitter",
-	"USER_PROFILE_LINK_SAVE": "Verknüpfungen speichern",
+  "USER_PROFILE_XMPP": "XMPP/Jabber",
+  "USER_PROFILE_IRC": "Nickname im IRC auf freenode.net",
+  "USER_PROFILE_LINK_SAVE": "Verknüpfungen speichern",
 	"USER_PROFILE_LINK_SUCCESS": "Verknüpfungen erfolgreich gespeichert.",
 	"USER_PROFILE_LINK_ERROR": "Bitte überprüfe noch einmal deine Angaben.",
 	"USER_PROFILE_MAIL_TITLE": "E-Mail-Adresse",
@@ -154,7 +156,9 @@
 	"PROFILE_NO_BIO": "Dieses Mitglied hat noch keine Biographie angelegt.",
 	"PROFILE_FLATTR": "{{name}} auf Flattr",
 	"PROFILE_TWITTER": "{{name}} auf Twitter",
-	"PROFILE_APP": "{{name}} auf App.net",
+  "PROFILE_XMPP": "{{name}} im XMPP Netzwerk",
+  "PROFILE_IRC": "{{name}} im IRC auf irc.freenode.net",
+  "PROFILE_APP": "{{name}} auf App.net",
 
 	"LIVE_TITLE": "Die kollaborative Plattform für Sendungsnotizen",
 	"LIVE_WELCOME": "Willkommen! Hier siehst du, welche Podcast-Aufzeichnungen wann beginnen. Um live bei den Sendungsnotizen zu helfen,",
