--- a/app/languages/lang_en_US.json
+++ b/app/languages/lang_en_US.json
@@ -38,7 +38,9 @@
 	"USER_PROFILE_FLATTR": "Flattr",
 	"USER_PROFILE_APP": "App.net",
 	"USER_PROFILE_TWITTER": "Twitter",
-	"USER_PROFILE_LINK_SAVE": "Save links",
+  "USER_PROFILE_XMPP": "XMPP/Jabber",
+  "USER_PROFILE_IRC": "Nickname at IRC on freenode.net",
+  "USER_PROFILE_LINK_SAVE": "Save links",
 	"USER_PROFILE_LINK_SUCCESS": "Successfully saved links.",
 	"USER_PROFILE_LINK_ERROR": "Please check your input again.",
 	"USER_PROFILE_MAIL_TITLE": "Email address",
@@ -154,7 +156,8 @@
 	"PROFILE_NO_BIO": "The user hasn't created a biography until now.",
 	"PROFILE_FLATTR": "{{name}} on Flattr",
 	"PROFILE_TWITTER": "{{name}} on Twitter",
-	"PROFILE_APP": "{{name}} on App.net",
+  "PROFILE_XMPP": "{{name}} on XMPP Network",
+  "PROFILE_APP": "{{name}} on App.net",
 
 	"LIVE_TITLE": "The collaborative platform for show notes",
 	"LIVE_WELCOME": "Welcome! Here you can see at what time which podcast show is recorded. For live writing of the show notes,",
