--- a/app/languages/lang_en_US.json
+++ b/app/languages/lang_en_US.json
@@ -268,5 +268,6 @@
   "COMMUNITY_GITHUB_TITLE": "Github",
   "COMMUNITY_GITHUB_TEXT": "The whole platform is developed in public on <a href=\"https://github.com/shownotes\">GitHub</a>. Have a look at it if you want to contribute.",
 
-  "SIDEBAR_STATISTICS_TITLE": "Podcast Statistics"
+  "SIDEBAR_STATISTICS_TITLE": "Podcast Statistics",
+  "SIDEBAR_STATISTICS": "Podcast Statistics"
 }
