--- a/app/languages/lang_de_DE.json
+++ b/app/languages/lang_de_DE.json
@@ -270,5 +270,6 @@
   "COMMUNITY_GITHUB_TEXT": "Die komplette Plattform wird öffentlich auf <a href=\"https://github.com/shownotes\">GitHub</a> entwickelt. Wenn du dich daran beteiligen möchtest, kannst du dort gerne vorbeischauen.",
 
   "SIDEBAR_STATISTICS_TITLE": "Podcast Statistiken",
-  "SIDEBAR_STATISTICS": "Podcast Statistiken"
+  "SIDEBAR_STATISTICS": "Podcast Statistiken",
+  "WORDCLOUD_WELCOME": "Folgende Wortwolke visualisiert die häufigsten Wörter aller Podcasts von Shownot.es"
 }
